
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    (order is reverse-chronologic)
    ******************************************************* 
     

Darkbot 8rc3: Jan 16 2008
	- Alarmclock function uses time_t variable now instead of long. 
	  Also now accepts arguments specified in seconds.

	- Bot no longer crashing during start if there's blank lines in 
	  the servers file. It now ignores blank lines and comments 
	  starting with '#' and '/'.  If the server file is blank, it 
	  aborts and tells the user to edit the file.

	- Added pluralize() function for beautification purposes. See more 
	  in general.c.
	

Darkbot 8rc2: June 07, 2007
	- The STATS command, and all overhead produced by this command 
	  can now be disabled during compile like so:
		./configure --disable-stats 
		OR
		./configure --enable-stats=no

	- Changed the RANDOMSTUFF command to be a NORMAL_COMMAND, so you 
	  can use this command with ADDRESS_INVOKE again (address the bot
	  directly).

	- Added a little thing at the top of docs/WHATSNEW that indicates 
	  which order the lines therein consist of according to when the 
	  changes they represent were implemented. Made this sound more 
	  technical than it should for no reason at all.

        - If the input type is ADDRESS_INVOKE (the bot was called upon by  
          name), the bot responds anyway now, because it's going to output 
          an "I don't know" response if the topic doesn't exist. This doesn't 
          happen with  DIRECT_INVOKE because the text may have been normal 
	  channel conversation that was mistakenly parsed as a command.

	- Commands which require 0 parameters now act accordingly again 
	  when supplied with too many arguments. In other words, "dbtest 
 	  info things" would trigger the info command before. Now, it	
	  uses check_existing_url and outputs a response if the topic 