@@ -6,6 +6,11 @@
     ******************************************************* 
      
 
+Darkbot 8rc3: Feb 03 2008
+	- More work on unixtime function. It now has more complex error
+	  checking for strtol. More work on this to come. 
+	- Renamed pluralize function to plural.
+
 Darkbot 8rc3: Jan 16 2008
 	- Alarmclock function uses time_t variable now instead of long. 
 	  Also now accepts arguments specified in seconds.
